# dcicwrangling

./: .gitignore  CHANGELOG.rst  Makefile  pyproject.toml
.github/workflows/: main-publish.yml  main.yml
functions/: cleanup.py  geo_minimization.py  notebook_functions.py  script_utils.py  wfr.py  wfr_settings.py
notebooks/Encode_Pipelines/: 2021 AtacSeq Pipeline V3 with merge fastq-Cut&Run.ipynb  2021 ChipSeq Pipeline V3-withmergefastq.ipynb
notebooks/rahi-scripts/: 17_geo-submission-version2.ipynb  Untitled.ipynb  general_data_extraction.ipynb
notebooks/useful_notebooks/: 01_find_and_release.ipynb  02_find_and_copy_local.ipynb  03_find_and_transfer_env.ipynb  04_microscopy_template_submit4dn.ipynb  04_omics_template_submit4dn.ipynb  05_oh_user_list.ipynb  06_google_sheet_example.ipynb  07_find_items_add_to_excel_or_create_inserts.ipynb  08_replace_sets.ipynb  10_move_opfs_to_processed_files.ipynb  11_change_status_opf_collections.ipynb  12_change_status_opf_collections.ipynb  12_geo_submission.ipynb  13_delete_uploaded_files.ipynb  13_replace_uploaded_files.ipynb  14_add_GEO_SRA_dbxrefs_to_items.ipynb  15_add_opf_collections_to_sets.ipynb  15_audit_eset_dbxrefs.ipynb  16_add_lab_award.ipynb  (+6 more)
scripts/: delete_item_or_fields.py  generate_wfr_from_pf.py  geo2fdn.py  get_item_ids_from_search.py  hic_table.py  parse_damid_pf.py  patch_field_for_many_items.py
tests/: test_delete_item_or_fields.py  test_generate_wfr_from_pf.py  test_geo2fdn.py  test_get_linked_item_ids.py  test_patch_field_for_many_items.py  test_script_utils.py  test_version.py
(+3 files in other folders)
