[tool.poetry]
name = "dcicwrangling"
version = "2.1.0b"
description = "Scripts and Jupyter notebooks for 4DN wrangling"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/4dn-dcic/dcicwrangling"
repository = "https://github.com/4dn-dcic/dcicwrangling"
packages = [{ include="scripts", from="." }]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
dcicutils = "^6.8.0"
openpyxl = "^3.1.2"
Biopython = "1.76"
GEOparse = "^2.0.1"
jupyterlab = "3.2.8"

[tool.poetry.dev-dependencies]
flake8 = ">=3.9.2"
pytest = ">=7.2.2"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
invoke = "^1.6.0"

[tool.poetry.scripts]
fetch-items = "scripts.item_fetcher:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
